new and improved

--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
-
-<!DOCTYPE html><html><head><meta
-charset="utf-8"><meta
-name="viewport" content="width=device-width, initial-scale=1"><title>Better Motherfucking Website</title><style type="text/css">body{margin:40px
-auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0
-10px}h1,h2,h3{line-height:1.2}</style></head><body><header><h1>This is <em>still</em> a motherfucking website.</h1>
-<aside>And it's more fucking perfect than the last guy's.</aside>
-</header><h2>Seriously, it takes minimal fucking effort to improve this shit.</h2><p><strong>7 fucking declarations.</strong></p><p>That's how much CSS it took to turn that <a
-href="http://motherfuckingwebsite.com/">grotesque pile of shit</a> into this easy-to-read masterpiece. It's so fucking simple and it <em>still</em> has all the glory of the original perfect-ass website:</p><ul><li>Shit's <em>still</em> lightweight and loads fast</li><li><em>Still</em> fits on all your shitty screens</li><li><em>Still</em> looks the same in all your shitty browsers</li><li>The motherfucker's <em>still</em> accessible to every asshole that visits your site</li><li>Shit's <em>still</em> legible and gets your fucking point across</li></ul><h3>And guess what, motherfucker:</h3><p>You never knew it, but it's easy to improve readability on your site. Here's how.</p><h2>Let it breathe</h2><p>Look at lines 1 and 2 of some shitty website you're building. Assuming they're not married they probably shouldn't be humping. The defaults are trash -- pick a minimum <code>line-height: 1.4</code> for body copy. Headings should be tighter. If you can't see that...piss off.</p><p>If your text hits the side of the browser, fuck off forever. You ever see a book like that? Yes? What a shitty book.</p><h2>A little less contrast</h2><p>Black on white? How often do you see that kind of contrast in real life? Tone it down a bit, asshole. I would've even made this site's background a nice <code>#EEEEEE</code> if I wasn't so focused on keeping declarations to a lean 7 fucking lines.</p><h2>Size Matters</h2><p>I know your partner says otherwise, but it's true. Bump that body copy to render close to 16px or more. Smaller type works well for print, not the screen.</p><h2>Line-width, motherfucker</h2><p>Looking at an LCD screen is strainful enough. Don't make me read a line of text that's 200 fucking characters long. Keep it to a nice 60-80 and users might actually read more than one sentence of your worthless dribble.</p><h3>Yes, this is <em>also</em> fucking satire, you fuck</h3><p>I love what the creator of <a
-href="http://motherfuckingwebsite.com/">this site's inspiration</a> did. What I'm saying is that it's so, so simple to make sites easier to read. Websites are broken by default, they are functional, high-performing, and accessible, but they're also fucking ugly. You and all the other web designers out there need to make them not total shit.</p><blockquote>"You're a fucking moron if you use default browser styles."
-<br>
-- Eleanor Roosevelt</blockquote><hr><h2>Epilogue</h2><p>Inspired by the geniuses behind <a
-href="http://motherfuckingwebsite.com/">motherfuckingwebsite.com</a> and <a
-href="http://txti.es">txti</a>.</p><p>This page&mdash;that isn't a total fucking eyesore&mdash;was created by <a
-href="https://twitter.com/drew_mc">me</a> with help from <a
-href="https://twitter.com/gabehammersmith">him</a>. <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-46163202-2','auto');ga('send','pageview');</script> </body></html>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0"/>
+        <title>Even Better Motherfucking Website</title>
+        <meta name="description" content="It's even more fucking perfect than the others motherfucking websites."/>
+        <link rel="canonical" href="http://evenbettermotherfucking.website"/>
+        <style>
+            body {margin: 5% auto; background: #f2f2f2; color: #444444; font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
+            code {background: white;}
+            a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
+            a:hover {border-bottom: 0;}
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>This is an even better motherfucking website.</h1>
+            <aside>It's even more fucking perfect than the other motherfucking websites. And why is that, you fuck?</aside>
+        </header>
+        <h2><strong>Hipstered domain extension and beautiful typography.</strong></h2>
+        <p>We all know that <a href="http://motherfuckingwebsite.com">Motherfucking Website</a> ― <em>MFW</em> ― it's grotesque pile of shit. And we also know that <a href="http://bettermotherfuckingwebsite.com">Better Motherfucking Website</a> ― <em>BMFW</em> ― improved the <i>Ass-Blastered Crap</i> into an (almost) easy-to-read masterpiece. But I made it even better! Like the other motherfucking websites, <strong>Even Better Motherfucking Website</strong> ― <em>EBMFW</em> ―, has all of the glory that the original, 'perfect-ass' website has - along with some improvements from the <em>BMFW</em>:</p>
+        <ul>
+            <li>Shit's <em>still</em> lightweight and loads fast;</li>
+            <li><em>Still</em> fits on all of your shitty screens;</li>
+            <li><em>Still</em> looks the same in all of your shitty browsers;</li>
+            <li>This motherfucker's <em>still</em> accessible to every asshole that visits your site;</li>
+            <li>Shit's <em>still</em> legible and gets your fucking point across;</li>
+            <li><strong>Plus a hipstered domain extension and beautiful typography.</strong></li>
+        </ul>
+        <h2>What about Comic Sans?</h2>
+        <p>That really hurt! Who throws a shoe? Honestly?</p>
+        <h2>Let it breathe even more</h2>
+        <blockquote>
+            "Look at lines 1 and 2 of some shitty website you're building. Assuming they're not married, they probably shouldn't be humping. The defaults are trash ― pick a minimum <code>line-height: 1.4</code> for body copy. Headings should be tighter. If you can't see that... piss off. If your text hits the side of the browser, fuck off forever. Have you ever seen a book like that? Yes? What a shitty book."<br/>
+            - <a href="http://bettermotherfuckingwebsite.com"><em>BMFW</em></a>
+        </blockquote>
+        <p>I made it even better: <code>line-height: 1.8</code></p>
+        <h2>A little less contrast</h2>
+        <blockquote>
+            "Black on white? How often do you see that kind of contrast in real life? Tone it down a bit, asshole."<br>
+            - <a href="http://bettermotherfuckingwebsite.com"><em>BMFW</em></a>
+        </blockquote>
+        <p>I made it even better: <code>background: #f2f2f2</code><br/>Because I don't care about 7 fucking lines of declarations.</p>
+        <h2>Yes, this continues to be fucking satirical, fuckers</h2>
+        <p>Like the creator of <a href="http://bettermotherfuckingwebsite.com">Better Motherfucking Website</a>, I ♥ what the creator of <a href="http://motherfuckingwebsite.com">Motherfucking Website</a> did. It's all about the message! But let's face it: would you rather have crap, or some beautifully-aligned shit?</p>
+        <blockquote>
+            "Imagine all the people..."<br>
+            - <em>John Lennon, Yoko's husband</em>
+        </blockquote>
+        <hr>
+        <h2>Epilogue</h2>
+        <p>Inspired by the geniuses behind <a href="http://bettermotherfuckingwebsite.com">Better Motherfucking Website</a> and <a href="http://motherfuckingwebsite.com">Motherfucking Website</a>. ☺</p>
+        <footer>
+            <p><strong>Even Better Motherfucking Website</strong> it's a <a href="http://setetres.st">Seventy Three</a> Project.<br/>Open source code on <a href="http://setetres.st/ebmfw">GitHub</a>.</p>
+        </footer>
+    </body>
+</html>
