--- a/index.html
+++ b/index.html
@@ -1,10 +1,77 @@
 <html>
+
+<head>
+  <style>
+    .fw2 {
+      font-weight: 200;
+    }
+
+    .lh-copy {
+      line-height: 1.5;
+    }
+
+    .black-90 {
+      color: rgba(0, 0, 0, .9);
+    }
+
+    .black-50 {
+      color: rgba(0, 0, 0, .5);
+    }
+
+    .ph4 {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+
+    .mt0 {
+      margin-top: 0;
+    }
+
+    .mv3 {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .tc {
+      text-align: center;
+    }
+
+    .f3 {
+      font-size: 1.5rem;
+    }
+
+    .f5 {
+      font-size: 1rem;
+    }
+
+    @media screen and (min-width: 30em) and (max-width: 60em) {
+      .f2-m {
+        font-size: 2.25rem;
+      }
+
+      .f4-m {
+        font-size: 1.25rem;
+      }
+    }
+
+    @media screen and (min-width: 60em) {
+      .f1-l {
+        font-size: 3rem;
+      }
+
+      .f3-l {
+        font-size: 1.5rem;
+      }
+    }
+  </style>
+</head>
 <header class="tc ph4">
   <h1 class="f3 f2-m f1-l fw2 black-90 mv3">
-    This is the title
+    Coming Soon
   </h1>
   <h2 class="f5 f4-m f3-l fw2 black-50 mt0 lh-copy">
-    This is the subtitle where additional information can go if you really need it.
+    Trust me, we're just as excited as you.
   </h2>
 </header>
+
 </html>
