--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="tachyons.css">
 </head>
-<main class="mw6 center pt4">
+<main class="mw6 center pt4 bg-yellow">
   <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
     <div class="dtc w2 w3-ns v-mid">
       <img src="pics/scott.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
