--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="tachyons.css">
 </head>
 
-<body class="bg-light-yellow">
+<body class="bg-light-yellow sans-serif">
   <main class="mw6 center pt6">
     <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
       <div class="dtc w2 w3-ns v-mid">
