--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 </head>
 
 <body class="bg-light-yellow sans-serif">
+  <h1 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+        <span class="bg-black-90 lh-copy white pa1 tracked-tight">
+          past proprietors
+        </span>
+      </h1>
   <main class="mw6 center pt6">
     <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
       <div class="dtc w2 w3-ns v-mid">
