--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 
 <body class="bg-light-yellow sans-serif">
-  <main class="mw6 center pt6">
-    <h1 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+  <main class="mw7 center pt6">
+    <h1 class="f2 f1-m f-subheadline-l mv0">
           <span class="bg-black-90 lh-copy white pa1 tracked-tight">
             past proprietors
           </span>
