--- a/index.html
+++ b/index.html
@@ -11,74 +11,74 @@
             past proprietors
           </span>
         </h1>
-    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/scott.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
         <h1 class="f6 f5-ns fw6 lh-title black mv0">scotty k </h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@yg</h2>
+        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">+ Follow</button>
+          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
-    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/henry.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
         <h1 class="f6 f5-ns fw6 lh-title black mv0">henry d</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@99xx88randomhandle</h2>
+        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">+ Follow</button>
+          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
-    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/noah.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
         <h1 class="f6 f5-ns fw6 lh-title black mv0">johnson</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@favfavfav</h2>
+        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">+ Follow</button>
+          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
-    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/jesse.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
         <h1 class="f6 f5-ns fw6 lh-title black mv0">jesse "the killer" klein</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@99xx88randomhandle</h2>
+        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">+ Follow</button>
+          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
 
-    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/adam.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
         <h1 class="f6 f5-ns fw6 lh-title black mv0">adam "the apple" kor</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@99xx88randomhandle</h2>
+        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">+ Follow</button>
+          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
