--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body class="bg-light-yellow sans-serif">
-  <main class="mw7 center pv3">
+  <main class="mw7 center pv3 measure-narrow">
     <h1 class="f2 f1-m f-subheadline-l mv0">
           <span class="bg-black-90 lh-copy white pa1 tracked-tight">
             past proprietors
