just a lil measure

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 
 <body class="bg-light-yellow sans-serif">
-  <main class="mw7 center pv3 measure-narrow">
+  <main class="mw7 center pv3 measure">
     <h1 class="f2 f1-m f-subheadline-l mv0">
           <span class="bg-black-90 lh-copy white pa1 tracked-tight">
-            past proprietors
+            proprietors
           </span>
         </h1>
     <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
@@ -21,7 +21,7 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
@@ -35,7 +35,7 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
@@ -49,7 +49,7 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
@@ -63,7 +63,7 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
@@ -78,7 +78,7 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-black-80 white dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
         </form>
       </div>
     </article>
