--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <img src="pics/scott.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
-        <h1 class="f6 f5-ns fw6 lh-title black mv0">scotty k </h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">scott</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">2016 - 2018</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
         </form>
       </div>
     </article>
@@ -30,12 +30,12 @@
         <img src="pics/henry.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
-        <h1 class="f6 f5-ns fw6 lh-title black mv0">henry d</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">henry</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">2016 - 2018</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
         </form>
       </div>
     </article>
@@ -44,12 +44,12 @@
         <img src="pics/noah.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
-        <h1 class="f6 f5-ns fw6 lh-title black mv0">johnson</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">noah</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">2016 - 2018</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
         </form>
       </div>
     </article>
@@ -58,12 +58,12 @@
         <img src="pics/jesse.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
-        <h1 class="f6 f5-ns fw6 lh-title black mv0">jesse "the killer" klein</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">jesse</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">2017 - 2018</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
         </form>
       </div>
     </article>
@@ -73,12 +73,12 @@
         <img src="pics/adam.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
       <div class="dtc v-mid pl3">
-        <h1 class="f6 f5-ns fw6 lh-title black mv0">adam "the apple" kor</h1>
-        <h2 class="f6 fw4 mt0 mb0 black-60">@</h2>
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">adam</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">2016-2017</h2>
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">Follow</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
         </form>
       </div>
     </article>
