make button work

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             proprietors
           </span>
         </h1>
-    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
+    <article class="dt w-100 pb2 mt2">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/scott.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
@@ -21,11 +21,11 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href="https://www.instagram.com/scottkrulcik" target="_none">insta</button>
         </form>
       </div>
     </article>
-    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
+    <article class="dt w-100 pb2 mt2">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/henry.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
@@ -35,11 +35,11 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href="https://www.instagram.com/henrydixon" target="_none">insta</button>
         </form>
       </div>
     </article>
-    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
+    <article class="dt w-100 pb2 mt2">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/noah.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
@@ -49,11 +49,11 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href="https://www.instagram.com/noahmichaeljohnson" target="_none">insta</button>
         </form>
       </div>
     </article>
-    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
+    <article class="dt w-100 pb2 mt2">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/jesse.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
@@ -63,12 +63,12 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href="https://www.instagram.com/jessejwk" target="_none">insta</button>
         </form>
       </div>
     </article>
 
-    <article class="dt w-100 pb2 mt2" href="https://www.instagram.com/henrydixon">
+    <article class="dt w-100 pb2 mt2">
       <div class="dtc w2 w3-ns v-mid">
         <img src="pics/adam.jpg" class="ba b--black-10 db br-100 w2 w3-ns h2 h3-ns" />
       </div>
@@ -78,7 +78,7 @@
       </div>
       <div class="dtc v-mid">
         <form class="w-100 tr">
-          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" type="submit">insta</button>
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href="https://www.instagram.com/kor_me_adam" target="_none">insta</button>
         </form>
       </div>
     </article>
